sample/msvc/error/c2159.cpp
// C2159.cpp
// compile with: /c
static int i;   // OK
extern static int i;   // C2159
